Fix: nav order, spacing using classes & Feat: update to V.0.0.4

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -246,7 +246,7 @@ a {
         border: none;
         background: transparent;
         padding: 0;
-        margin: 0;
+        margin-left: .5rem;
 
         &--btn {
             font-size: 1.5rem;
